<resources>
    <string name="app_name">Elder Friend</string>
    <string name="menu_Home">Home</string>
    <string name="menu_Login">Login</string>
    <string name="label_logout">Log Out</string>
    <string name="menu_MyProfile">Profile</string>
    <string name="password">Password:</string>
    <string name="menu_SignUp">Register User</string>
    <string name="title">Attention</string>
    <string name="name">Name:</string>
    <string name="name_example">António José Moreira</string>
    <string name="username">Username:</string>
    <string name="username_example">a_moreira</string>
    <string name="email">Email:</string>
    <string name="email_example">a_moreira@mail.xpto</string>
    <string name="type">Select an user role:</string>
    <string name="passwordConf">Pass Confirmation:</string>
    <string name="admin">Admin</string>
    <string name="normal">Normal</string>
    <string name="alreadySigup">Already have an account? Click here…</string>
    <string name="name_elder">Elder Name:</string>
    <string name="birth_date">Birth Date:</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="photo">Click here to pick a photo from the gallery</string>
    <string name="date_example">yyyy-mm-dd</string>
    <string name="home_last_current_values">Last electrical current values (W)</string>
    <string name="chart_current_no_data">No electrical current data available</string>
    <string name="status_card_awake_failed">Failed to get status card data</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_awake">Awake</string>
    <string name="label_house_state">House State</string>
    <string name="label_inside">Inside</string>
    <string name="label_outside">Outside</string>
    <string name="label_weather">Weather</string>
    <string name="label_temperature">Temperature</string>
    <string name="label_n_a">N/A</string>
    <string name="label_home">Home</string>
    <string name="label_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_last_temperature_values">Last internal temperature values (°C)</string>
    <string name="chart_temperature_no_data">No internal temperature data available</string>
    <string name="profile_account_settings_title">Account Settings</string>
    <string name="label_change_password">Change Password</string>
    <string name="profile_update_email">Update Email Address</string>
    <string name="label_ok">Ok</string>
    <string name="label_cancel">Cancel</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="label_state">State</string>
    <string name="cd_state_menu_icon">House state menu icon</string>
    <string name="cd_state_menu_arrow_icon">House state menu open arrow icon</string>
    <string name="label_bed_state">Bed state</string>
    <string name="label_current_state">Electrical current state</string>
    <string name="label_door_state">Outside door</string>
    <string name="label_division_state">House division state</string>
    <string name="label_internal_temp_state">Internal temperature</string>
    <string name="label_window_state">House windows</string>
    <string name="label_lights_state">House lights</string>
    <string name="label_sos_state">SOS button</string>
    <string name="state_menu_back">Go back to the main menu</string>
    <string name="btn_hour">Hour</string>
    <string name="btn_day">Day</string>
    <string name="btn_month">Month</string>
    <string name="label_entered">Entered</string>
    <string name="label_left">Left</string>
    <string name="label_electrical_current">Electrical current</string>
    <string name="label_asleep">Asleep</string>
    <string name="label_closed">Closed</string>
    <string name="label_open">Open</string>
    <string name="label_on">On</string>
    <string name="label_off">Off</string>
    <string name="label_showing_results_for">Showing results for:</string>
    <string name="label_username">Username</string>
    <string name="label_email">Email</string>
    <string name="profile_account_info_title">Account information</string>
    <string name="label_name">Name</string>
    <string name="undefined_gender">Undefined gender</string>
    <string name="logout_failed">Couldn\'t sign out</string>
    <string name="label_gas_emition">Gas emition</string>
    <string name="label_normal_level">Normal level</string>
    <string name="label_danger">Danger</string>
    <string name="label_no_data_to_display">No data to display</string>
    <string name="label_password">Password</string>
    <string name="label_no_account_text">Don\'t have an account?</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_door_anomaly">Door anomaly</string>
    <string name="door_anomaly_should_be_outside">The elder should be outside but is inside.</string>
    <string name="door_anomaly_should_be_inside">The elder should be inside but is outside.</string>
    <string-array name="array_divisions">
        <item>All</item>
        <item>Bedroom</item>
        <item>Kitchen</item>
        <item>Bathroom</item>
        <item>Attic</item>
        <item>Living Room</item>
    </string-array>
</resources>
