<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="64dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:cardBackgroundColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingStart="32dp"
                android:paddingTop="64dp"
                android:paddingEnd="32dp"
                android:paddingBottom="32dp">

                <TextView
                    android:id="@+id/tv_profile_elder_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="8dp"
                    android:text="Name"
                    android:textColor="@color/md_blue_grey_900"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_profile_elder_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/md_grey_400"
                    android:text="Info"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/profile_account_info_title"

                    android:textAllCaps="true"
                    android:textColor="@color/md_grey_300"
                    android:textStyle="bold" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="5dp"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="32dp"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_mdi_account_badge_black_24dp"
                                android:tint="@color/md_grey_600" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="16dp"
                                    android:text="@string/label_name"
                                    android:textColor="@color/md_grey_500"
                                    android:textStyle="bold"/>

                                <TextView
                                    android:id="@+id/tv_profile_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="16dp"
                                    android:text="..."
                                    android:textColor="@color/md_grey_900" />
                            </LinearLayout>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="48dp"
                            android:layout_marginBottom="16dp"
                            android:background="@color/md_grey_300"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="32dp"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_person_black_24dp"
                                android:tint="@color/md_grey_600" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="16dp"
                                    android:text="@string/label_username"
                                    android:textColor="@color/md_grey_500"
                                    android:textStyle="bold"/>

                                <TextView
                                    android:id="@+id/tv_profile_username"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="16dp"
                                    android:text="..."
                                    android:textColor="@color/md_grey_900" />
                            </LinearLayout>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="48dp"
                            android:layout_marginBottom="16dp"
                            android:background="@color/md_grey_300"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="32dp"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_email_black_24dp"
                                android:tint="@color/md_grey_600" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="16dp"
                                    android:text="@string/label_email"
                                    android:textColor="@color/md_grey_500"
                                    android:textStyle="bold"/>

                                <TextView
                                    android:id="@+id/tv_profile_email"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="16dp"
                                    android:text="..."
                                    android:textColor="@color/md_grey_900" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/profile_account_settings_title"

                    android:textAllCaps="true"
                    android:textColor="@color/md_grey_300"
                    android:textStyle="bold" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_profile_change_email"
                            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="16dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="16dp"
                            android:paddingBottom="10dp"
                            android:text="@string/profile_update_email"
                            android:textAlignment="textStart"
                            android:textAllCaps="false"
                            android:textColor="@color/md_grey_800"
                            android:visibility="gone"
                            app:cornerRadius="0dp"
                            app:icon="@drawable/ic_email_black_24dp"
                            app:iconPadding="16dp"
                            app:iconTint="@color/md_blue_A200"
                            app:rippleColor="@color/md_grey_300" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_profile_change_password"
                            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="16dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="16dp"
                            android:paddingBottom="10dp"
                            android:text="@string/label_change_password"
                            android:textAlignment="textStart"
                            android:textAllCaps="false"
                            android:textColor="@color/md_grey_800"
                            android:visibility="gone"
                            app:cornerRadius="0dp"
                            app:icon="@drawable/ic_vpn_key_black_24dp"
                            app:iconPadding="16dp"
                            app:iconTint="@color/md_teal_A400"
                            app:rippleColor="@color/md_grey_300" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_profile_log_out"
                            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="16dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="16dp"
                            android:paddingBottom="10dp"
                            android:text="@string/label_logout"
                            android:textAlignment="textStart"
                            android:textAllCaps="false"
                            android:textColor="@color/md_grey_800"
                            app:cornerRadius="0dp"
                            app:icon="@drawable/ic_mdi_logout_black_24dp"
                            app:iconPadding="16dp"
                            app:iconTint="@color/md_red_A400"
                            app:rippleColor="@color/md_grey_300" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="56dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:translationZ="2dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="3dp">

            <ImageView
                android:id="@+id/iv_profile_picture"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:contentDescription="Profile picture"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person_black_24dp" />
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
</ScrollView>
